blob of initial commit

--- a/apps/generic-test-bed/src/app/app.component.html
+++ b/apps/generic-test-bed/src/app/app.component.html
@@ -1,1 +1,7 @@
+<ul>
+    <li *ngFor="let t of todos" class="todo">{{ t.title }}</li>
+</ul>
+
+<button id="add-todo" (click)="addTodo()" >Add Todo</button>
+
 <localexp-nx-welcome></localexp-nx-welcome>
