--- a/apps/generic-test-bed/src/styles.scss
+++ b/apps/generic-test-bed/src/styles.scss
@@ -1,1 +1,31 @@
 /* You can add global styles to this file, and also import other style files */
+
+html {
+    -webkit-text-size-adjust: 100%;
+    font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, 'Noto Sans', sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
+    line-height: 1.5;
+    tab-size: 4;
+    scroll-behavior: smooth;
+}
+
+body { 
+    font-family: inherit;
+    line-height: inherit;
+}
+
+
+ul {
+    list-style-type: disc;
+}
+
+
+.container {
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 768px;
+    padding-bottom: 3rem;
+    padding-left: 1rem;
+    padding-right: 1rem;
+    color: rgba(55, 65, 81, 1);
+    width: 100%;
+}
